--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Shop</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/animate.css">
     <link rel="Icon" href="Images/Fav Icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@500&family=Lato:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header bar start here -->
 
-    <header class="main-header">
+    <header class="main-header" id="home">
 
         <!-- Navigation Start here -->
 
         <nav class="navigationbar">
 
             <div class="logo">
-                <img src="Images/logo.png" alt="BrandLogo">
+                <a href="#home">
+                    <img src="Images/logo.png" alt="BrandLogo">
+                </a>
             </div>
             <ul>
                 <li><a href="#">About</a></li>
@@ -40,5 +43,16 @@
         </div>
 
     </header>
+
+    <!-- Header End Here -->
+
+
+    <!-- About Section Start Here -->
+
+    <section>
+        <div class="">
+
+        </div>
+    </section>
 </body>
 </html>
