--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 </a>
             </div>
             <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">Location</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#menu">Menu</a></li>
+                <li><a href="#location">Location</a></li>
             </ul>
         </nav>
 
@@ -48,21 +48,85 @@
 
     <!-- About Section Start Here -->
 
-    <section>
+    <section id="about">
         <div class="about-section">
 
             <div class="about-content">
                 <h1>About</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <div class="about-gallery">
-                    <img src="#" alt="">
-                    <img src="#" alt="">
-                    <img src="#" alt="">
-                    <img src="#" alt="">
+                    <div class="about-image" style="background-image: url(Images/about1.jpg)";></div>
+                    <div class="about-image" style="background-image: url(Images/about2.jpg)";></div>
+                    <div class="about-image" style="background-image: url(Images/about3.jpg)";></div>
+                    <div class="about-image" style="background-image: url(Images/about4.jpg)";></div>
                 </div>
             </div>
 
         </div>
     </section>
+
+    <!-- About Section End Here -->
+
+
+    <!-- Menu Section Start Here -->
+
+    <section id="menu">
+        <div class="menu-section">
+
+            <div class="menu-content">
+                <h1>Menu</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <div class="menu-gallery">
+                    <div class="menu-items">
+                        <h1>Drink</h1>
+                        <div class="menu-image" style="background-image: url(Images/Menu2.jpg);"></div>
+                        <div class="menu-text">
+                            <p>Tea</p>
+                            <p>Cofee</p>
+                            <p>Mineral Water</p>
+                            <p>Cold Drink</p>
+                        </div>
+                    </div>
+                    <div class="menu-items">
+                        <h1>Food</h1>
+                        <div class="menu-image" style="background-image: url(Images/Menu1.jpg);"></div>
+                        <div class="menu-text">
+                            <p>Paratha</p>
+                            <p>Omelette</p>
+                            <p>Cake</p>
+                            <p>Biscuits</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- Menu Section End Here -->
+
+    <!-- Location Section Start Here -->
+
+    <section id="location">
+        <div class="location-section">
+
+            <div class="location-content">
+                <h1>Loaction</h1>
+                <div class="location-item">
+                    <div class="location-gallery" style="background-image: url(Images/location.jpg);"></div>
+                    <div class="location-text">
+                        <h2>Hours</h2>
+                        <p>Mon-Thurs : 7am-8pm</p>
+                        <p>Fri-Sun : 8am-10pm</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Location section End Here -->
+
+    <footer> &copy;2021 Coffee Shop. All Rights Reserved.</footer>
+
 </body>
 </html>
